syntax = "proto3";

package rocket;

message Rocket{
    string id = 1;
    string name = 2;
    string type = 3;
}

service RocketService{
    rpc GetRocket (GetRocketRequest) returns (GetRocketResponse);
    rpc AddRocket (AddRocketRequest) returns (AddRocketResponse);
    rpc DeleteRocket (DeleteRocketRequest) returns (DeleteRocketResponse);
}

message GetRocketRequest{
    string id = 1;
}

message GetRocketResponse{
    Rocket Rocket = 1;
}

message AddRocketRequest{
    string id = 1;
}

message AddRocketResponse{
    Rocket Rocket = 1;
}

message DeleteRocketRequest{
    string id = 1;
}

message DeleteRocketResponse{
    string status = 1;
}